--- a/examples/editing/editingItemsCallbacks.html
+++ b/examples/editing/editingItemsCallbacks.html
@@ -9,9 +9,8 @@
       font-size: 11pt;
     }
   </style>
-
-  <script src="http://t4t5.github.io/sweetalert/dist/sweetalert.min.js"></script>
-  <link href="http://t4t5.github.io/sweetalert/dist/sweetalert.css" rel="stylesheet" type="text/css"/>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert@1.1.3/dist/sweetalert.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert@1.1.3/dist/sweetalert.css" rel="stylesheet" type="text/css"/>
 
   <script src="../../dist/timeline.js"></script>
   <link href="../../dist/timeline.min.css" rel="stylesheet" type="text/css" />
