Get moment with https instead of http in examples

--- a/examples/other/performance.html
+++ b/examples/other/performance.html
@@ -11,7 +11,7 @@
   </style>
 
   <!-- note: moment.js must be loaded before timeline.js, else timeline.js uses its embedded version of moment.js -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
 
   <script src="../../dist/timeline.js"></script>
   <link href="../../dist/timeline.min.css" rel="stylesheet" type="text/css" />
