--- a/examples/other/onTimeout.html
+++ b/examples/other/onTimeout.html
@@ -7,7 +7,7 @@
 
 <head>
   <title>Timeline | onTimeout example</title>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
   <script src="../../dist/timeline.js"></script>
   <link href="../../dist/timeline.min.css" rel="stylesheet" type="text/css" />
 </head>
