Fix moment and utc calling

--- a/examples/editing/tooltipOnItemChange.html
+++ b/examples/editing/tooltipOnItemChange.html
@@ -2,6 +2,7 @@
 <head>
   <title>Timeline | Tooltip on item onUpdateTime Option</title>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="../../dist/timeline.js"></script>
   <link href="../../dist/timeline.css" rel="stylesheet" type="text/css" />
@@ -42,7 +43,7 @@
 
  
   for (var order = 0; order < numberOfItems; order++) {
-    var date = timeline.moment();
+    var date = moment();
    
 
     date.add(Math.round(Math.random() * 2), 'hour');
